# heidsoft-gnu-tools

./: Makefile  Makefile.in  README.md  config.status  configure  configure.in  configure.scan  helloworld  helloworld.c
autom4te.cache/: output.1  traces.0  traces.1
